--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,7 @@
         "cn",
         "cva"
       ],
-      "config": "tailwind.config.cjs"
+      "config": "tailwind.config.js"
     }
   }
 }
