--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "whim",
-  "version": "1.0.1-beta.1",
+  "version": "1.0.1-beta.2",
   "private": true,
   "scripts": {
     "dev": "concurrently --kill-others \"dotenv -e .env.development -- prisma generate && dotenv -e .env.development -- next dev\" \"dotenv -e .env.development -- prisma studio\"",
@@ -8,10 +8,11 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "postinstall": "prisma generate"
+    "format:write": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
+    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
-    "@prisma/client": "^5.11.0",
+    "@prisma/client": "^5.15.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -24,35 +25,36 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "geist": "^1.2.2",
-    "next": "^14.1.4",
-    "next-auth": "5.0.0-beta.5",
+    "geist": "^1.3.0",
+    "next": "^14.2.3",
+    "next-auth": "5.0.0-beta.19",
     "next-themes": "^0.3.0",
-    "react": "^18.2.0",
-    "react-day-picker": "^8.10.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18.3.1",
     "sonner": "^1.4.41",
-    "tailwind-merge": "^2.2.2",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.0",
-    "zod": "^3.22.4"
+    "vaul": "^0.9.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20.11.30",
-    "@types/react": "^18.2.69",
-    "@types/react-dom": "^18.2.22",
+    "@types/node": "^20.14.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
-    "dotenv-cli": "^7.4.1",
+    "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.4",
-    "eslint-plugin-tailwindcss": "^3.15.1",
+    "eslint-config-next": "^14.2.3",
+    "eslint-plugin-tailwindcss": "^3.17.3",
     "postcss": "^8.4.38",
-    "prisma": "^5.11.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.3"
+    "prettier": "^3.3.1",
+    "prisma": "^5.15.0",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.4.5"
   }
 }
