refactor: biome check

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,15 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "plugin:tailwindcss/recommended"
-  ],
-  "plugins": [
-    "tailwindcss"
-  ],
-  "rules": {
-    "@next/next/no-html-link-for-pages": "off",
-    "tailwindcss/no-custom-classname": "off",
-    "tailwindcss/classnames-order": "error"
-  },
-  "settings": {
-    "tailwindcss": {
-      "callees": [
-        "cn",
-        "cva"
-      ],
-      "config": "tailwind.config.js"
-    }
-  }
+	"extends": ["next/core-web-vitals", "plugin:tailwindcss/recommended"],
+	"plugins": ["tailwindcss"],
+	"rules": {
+		"@next/next/no-html-link-for-pages": "off",
+		"tailwindcss/no-custom-classname": "off",
+		"tailwindcss/classnames-order": "error"
+	},
+	"settings": {
+		"tailwindcss": {
+			"callees": ["cn", "cva"],
+			"config": "tailwind.config.js"
+		}
+	}
 }
