--- a/package.json
+++ b/package.json
@@ -1,60 +1,59 @@
 {
-  "name": "whim",
-  "version": "1.0.1-beta.2",
-  "private": true,
-  "scripts": {
-    "dev": "concurrently --kill-others \"dotenv -e .env.development -- prisma generate && dotenv -e .env.development -- next dev\" \"dotenv -e .env.development -- prisma studio\"",
-    "build": "prisma generate && next build",
-    "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "format:write": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
-    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.15.0",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "bcrypt": "^5.1.1",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
-    "geist": "^1.3.0",
-    "next": "^14.2.3",
-    "next-auth": "5.0.0-beta.19",
-    "next-themes": "^0.3.0",
-    "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
-    "sonner": "^1.4.41",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.1",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20.14.2",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.19",
-    "concurrently": "^8.2.2",
-    "dotenv-cli": "^7.4.2",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.3",
-    "eslint-plugin-tailwindcss": "^3.17.3",
-    "postcss": "^8.4.38",
-    "prettier": "^3.3.1",
-    "prisma": "^5.15.0",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.4.5"
-  }
+	"name": "whim",
+	"version": "1.0.1-beta.2",
+	"private": true,
+	"scripts": {
+		"dev": "concurrently --kill-others \"dotenv -e .env.development -- prisma generate && dotenv -e .env.development -- next dev\" \"dotenv -e .env.development -- prisma studio\"",
+		"build": "prisma generate && next build",
+		"start": "next start",
+		"lint": "biome lint .",
+		"lint:write": "biome lint --write --unsafe .",
+		"format": "biome format .",
+		"format:write": "biome format --write .",
+		"check": "biome check --write --unsafe ."
+	},
+	"dependencies": {
+		"@prisma/client": "^5.18.0",
+		"@radix-ui/react-accordion": "^1.2.0",
+		"@radix-ui/react-dialog": "^1.1.1",
+		"@radix-ui/react-dropdown-menu": "^2.1.1",
+		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-popover": "^1.1.1",
+		"@radix-ui/react-separator": "^1.1.0",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-tabs": "^1.1.0",
+		"@radix-ui/react-tooltip": "^1.1.2",
+		"bcrypt": "^5.1.1",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"date-fns": "^3.6.0",
+		"geist": "^1.3.1",
+		"next": "^14.2.5",
+		"next-auth": "5.0.0-beta.19",
+		"next-themes": "^0.3.0",
+		"react": "^18.3.1",
+		"react-day-picker": "^9.0.7",
+		"react-dom": "^18.3.1",
+		"sonner": "^1.5.0",
+		"tailwind-merge": "^2.4.0",
+		"tailwindcss-animate": "^1.0.7",
+		"vaul": "^0.9.1",
+		"zod": "^3.23.8"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.8.3",
+		"@types/bcrypt": "^5.0.2",
+		"@types/node": "^22.1.0",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
+		"autoprefixer": "^10.4.20",
+		"concurrently": "^8.2.2",
+		"dotenv-cli": "^7.4.2",
+		"postcss": "^8.4.41",
+		"prettier": "^3.3.3",
+		"prisma": "^5.18.0",
+		"tailwindcss": "^3.4.7",
+		"typescript": "^5.5.4"
+	}
 }
