--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "whim",
-	"version": "1.0.1-beta.2",
+	"version": "1.0.0",
 	"private": true,
 	"scripts": {
 		"dev": "concurrently --kill-others \"dotenv -e .env.development -- prisma generate && dotenv -e .env.development -- next dev\" \"dotenv -e .env.development -- prisma studio\"",
@@ -30,7 +30,7 @@
 		"date-fns": "^3.6.0",
 		"geist": "^1.3.1",
 		"next": "^14.2.5",
-		"next-auth": "5.0.0-beta.19",
+		"next-auth": "5.0.0-beta.20",
 		"next-themes": "^0.3.0",
 		"react": "^18.3.1",
 		"react-day-picker": "^8.10.1",
